--- a/ZWidget.ui
+++ b/ZWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>177</height>
+    <height>261</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>0</y>
      <width>381</width>
-     <height>171</height>
+     <height>251</height>
     </rect>
    </property>
    <property name="title">
@@ -28,8 +28,8 @@
    <widget class="QPushButton" name="Home">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>50</y>
+      <x>40</x>
+      <y>20</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -38,45 +38,11 @@
      <string>Home</string>
     </property>
    </widget>
-   <widget class="QScrollBar" name="Scroll">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>100</y>
-      <width>261</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="minimum">
-     <number>0</number>
-    </property>
-    <property name="maximum">
-     <number>299</number>
-    </property>
-    <property name="sliderPosition">
-     <number>0</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <property name="invertedAppearance">
-     <bool>false</bool>
-    </property>
-    <property name="invertedControls">
-     <bool>true</bool>
-    </property>
-   </widget>
    <widget class="QPushButton" name="JogMinus">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>50</y>
+      <x>40</x>
+      <y>150</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -88,8 +54,8 @@
    <widget class="QPushButton" name="JogPlus">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>50</y>
+      <x>40</x>
+      <y>80</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -101,8 +67,8 @@
    <widget class="QPushButton" name="Move">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>100</y>
+      <x>180</x>
+      <y>140</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -114,16 +80,11 @@
    <widget class="QLabel" name="StatusLabel">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>20</y>
+      <x>140</x>
+      <y>30</y>
       <width>141</width>
       <height>20</height>
      </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
     </property>
     <property name="acceptDrops">
      <bool>false</bool>
@@ -144,8 +105,8 @@
    <widget class="QLCDNumber" name="CurrentPos">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>60</y>
+      <x>170</x>
+      <y>70</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -174,8 +135,8 @@
    <widget class="QLabel" name="CurPos">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>40</y>
+      <x>160</x>
+      <y>50</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -198,8 +159,8 @@
    <widget class="QLabel" name="DesPos">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>130</y>
+      <x>40</x>
+      <y>210</y>
       <width>111</width>
       <height>20</height>
      </rect>
@@ -222,8 +183,8 @@
    <widget class="QLabel" name="Jog">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>30</y>
+      <x>20</x>
+      <y>130</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -232,7 +193,7 @@
      <bool>false</bool>
     </property>
     <property name="text">
-     <string>Y Jog</string>
+     <string>X Jog</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -244,14 +205,39 @@
    <widget class="QDoubleSpinBox" name="DesirePos">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>130</y>
+      <x>170</x>
+      <y>210</y>
       <width>91</width>
       <height>21</height>
      </rect>
     </property>
     <property name="maximum">
-     <double>299.000000000000000</double>
+     <double>300.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QScrollBar" name="Scroll">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>20</y>
+      <width>21</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>300</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+    <property name="invertedAppearance">
+     <bool>true</bool>
+    </property>
+    <property name="invertedControls">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
